--- a/projects/aurora-simulation/styles.css
+++ b/projects/aurora-simulation/styles.css
@@ -28,7 +28,7 @@ p {
 }
 
 a {
-    color: #97aebb;
+    color: white;
     text-decoration: none;
     font-weight: 500;
     transition: all 0.3s ease;
